@@ -38,6 +38,7 @@ Version 6.7 - not yet released
   - fix task speed and time estimates before task start (#2876, #2906)
   - show "arm advance" button when manual arming is necessary (#1729)
   - support the OLC/DMSt 500km triangle threshold (#2963)
+  - render finish point as achieved when task is finished (#2140)
 * route planner
   - ignore inactive and acknowledged airspaces (#2866)
 * calculations
